@@ -7,9 +7,7 @@ import org.junit.jupiter.api.extension.ExtendWith;
 import org.mockito.MockitoAnnotations;
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.boot.test.context.SpringBootTest;
-import org.springframework.data.web.PageableHandlerMethodArgumentResolver;
 import org.springframework.http.MediaType;
-import org.springframework.http.converter.json.MappingJackson2HttpMessageConverter;
 import org.springframework.test.context.junit.jupiter.SpringExtension;
 import org.springframework.transaction.annotation.Transactional;
 import uk.gov.hmcts.reform.em.annotation.Application;
@@ -18,8 +16,6 @@ import uk.gov.hmcts.reform.em.annotation.domain.Annotation;
 import uk.gov.hmcts.reform.em.annotation.domain.IdamDetails;
 import uk.gov.hmcts.reform.em.annotation.domain.Rectangle;
 import uk.gov.hmcts.reform.em.annotation.repository.RectangleRepository;
-import uk.gov.hmcts.reform.em.annotation.rest.errors.ExceptionTranslator;
-import uk.gov.hmcts.reform.em.annotation.service.RectangleService;
 import uk.gov.hmcts.reform.em.annotation.service.dto.RectangleDTO;
 import uk.gov.hmcts.reform.em.annotation.service.mapper.RectangleMapper;
 
@@ -64,18 +60,6 @@ class RectangleResourceIntTest extends BaseTest {
 
     @Autowired
     private RectangleMapper rectangleMapper;
-    
-    @Autowired
-    private RectangleService rectangleService;
-
-    @Autowired
-    private MappingJackson2HttpMessageConverter jacksonMessageConverter;
-
-    @Autowired
-    private PageableHandlerMethodArgumentResolver pageableArgumentResolver;
-
-    @Autowired
-    private ExceptionTranslator exceptionTranslator;
 
     @Autowired
     private EntityManager em;
@@ -226,7 +210,7 @@ class RectangleResourceIntTest extends BaseTest {
         // Validate the Rectangle in the database
         List<Rectangle> rectangleList = rectangleRepository.findAll();
         assertThat(rectangleList).hasSize(databaseSizeBeforeUpdate);
-        Rectangle testRectangle = rectangleList.get(rectangleList.size() - 1);
+        Rectangle testRectangle = rectangleList.getLast();
         assertThat(testRectangle.getX()).isEqualTo(UPDATED_X);
         assertThat(testRectangle.getY()).isEqualTo(UPDATED_Y);
         assertThat(testRectangle.getWidth()).isEqualTo(UPDATED_WIDTH);
